fix: border color in dark mode

--- a/src/renderer/src/styles/tailwind.css
+++ b/src/renderer/src/styles/tailwind.css
@@ -44,7 +44,7 @@
     --accent-foreground: 60 9.1% 97.8%;
     --destructive: 0 72.2% 50.6%;
     --destructive-foreground: 60 9.1% 97.8%;
-    --border: 12 6.5% 15.1%;
+    --border: 0 0% 22.1%;
     --input: 12 6.5% 15.1%;
     --ring: 20.5 90.2% 48.2%;
   }
